--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,3 +1,5 @@
+@import "app.css";
+
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +12,32 @@ body {
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.sk-wave {
+    width: var(--sk-size);
+    height: var(--sk-size);
+    display: flex;
+    justify-content: space-between;
+}
+
+.sk-wave-rect {
+    background-color: var(--sk-color);
+    height: 100%;
+    width: 15%;
+    animation: sk-wave 1.2s infinite ease-in-out;
+}
+
+.sk-wave-rect:nth-child(1) { animation-delay: -1.2s; }
+.sk-wave-rect:nth-child(2) { animation-delay: -1.1s; }
+.sk-wave-rect:nth-child(3) { animation-delay: -1.0s; }
+.sk-wave-rect:nth-child(4) { animation-delay: -0.9s; }
+.sk-wave-rect:nth-child(5) { animation-delay: -0.8s; }
+
+@keyframes sk-wave {
+    0%, 40%, 100% {
+        transform: scaleY(0.4);
+    } 20% {
+          transform: scaleY(1);
+      }
 }
