Add navigation bar and replaced logout button.
Signed-off-by: Happi Yvan <nwaforhappiyvan@gmail.com>

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -29,3 +29,8 @@
         opacity: 1;
     }
 }
+
+/* DROP DOWNS BACKGROUND COLOR */
+
+.navbar-nav > li > .dropdown-menu { background-color: #FF0000; }
+
