--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -36,15 +36,6 @@
 
 /* ADD TASK BUTTON */
 
-/*.feedBackButton {*/
-/*    background-color : #31B0D5;*/
-/*    color: white;*/
-/*    padding: 10px 20px;*/
-/*    border-radius: 4px;*/
-/*    border-color: #46b8da;*/
-/*    margin-bottom: 1em;*/
-/*}*/
-
 .feedBackButton {
     position: fixed;
     bottom: -4px;
@@ -52,3 +43,12 @@
     margin-bottom: 1em;
 }
 
+/* ANIMATION FOR ADDING TASKS AND THE SEARCH FUNCTIONALITIES */
+
+.elem-zoom {
+    transition: transform .2s;
+}
+
+.elem-zoom:hover {
+    transform: scale(1.1);
+}
