--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,6 +10,10 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
+.body-bg {
+    background-color: #eee;
+}
+
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
