--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -2,7 +2,7 @@
 /* HELPER CSS VALUES */
 
 .br-8 {
-    border-radius: 8px;
+    border-radius: 8px 8px 8px 8px;
 }
 
 .br-0 {
@@ -11,6 +11,13 @@
 
 .clickable {
     cursor: pointer;
+}
+
+.sticky-top-10 {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 10px;
+    z-index: 1020;
 }
 
 .no-border-outline:focus {
@@ -30,6 +37,7 @@
     -webkit-animation-fill-mode: both;
     animation-fill-mode: both;
 }
+
 @-webkit-keyframes loginAndSignupZoomIn {
     0% {
         opacity: 0;
